--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@ schooling:<input type="checkbox" name="schooling"><br><br>
     <option>population</option>
 </select>
    </form> 
+   <p>Programming is the art of using different languages to build websites, mobile apps among others.</p>
 </body>
 </html>
