--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <p>
+        Hello gugz
+    </p>
    <form>
 <h1>LOG IN TEXT BOX</h1>
 User name:<input type="text" name="username"><br><br>
