--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <p>
         Hello gugz
     </p>
+    <p>
+        I have gold
+    </p>
    <form>
 <h1>LOG IN TEXT BOX</h1>
 User name:<input type="text" name="username"><br><br>
