--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@ schooling:<input type="checkbox" name="schooling"><br><br>
 </select>
    </form> 
    <p>Programming is the art of using different languages to build websites, mobile apps among others.</p>
+   <p>This is my paragraph</p>
 </body>
 </html>
