--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
+
     <p>I have what</p>
-=======
+
     <p>
         Hello gugz
     </p>
     <p>
         I have gold
     </p>
->>>>>>> main
    <form>
 <h1>LOG IN TEXT BOX</h1>
 User name:<input type="text" name="username"><br><br>
@@ -47,6 +46,6 @@ schooling:<input type="checkbox" name="schooling"><br><br>
 </select>
    </form> 
    <p>Programming is the art of using different languages to build websites, mobile apps among others.</p>
-   <p>This is my para</p>
+   <p>This is my paragraph</p>
 </body>
 </html>
